# fictional-bassoon

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  Makefile  README.md  dev.bat  skills-lock.json  sonar-project.properties
.agents/skills/autofix/: SKILL.md
.agents/skills/code-review/: SKILL.md
.claude/: settings.json  settings.local.json
.claude/rules/: architecture.md  frontend.md  streaming-patterns.md
.claude/skills/unit-test-engineer/: SKILL.MD
.gemini/: settings.json
.gemini/agents/: backend_architect.md  frontend_architect.md
Scripts/: Makefile
backend/: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  celery_app.py  docker-compose.yaml  logging.ini  main.py  models.py  pyproject.toml  redis_pubsub.py  streaming.py  tasks.py  tox.ini  worker_runner.py
backend/docker/: .dockerignore  .env.example  Dockerfile
backend/docker/citus/: init.sql
backend/docker/clickhouse/clickhouse-01/config.d/: config.xml
backend/docker/clickhouse/clickhouse-02/config.d/: config.xml
backend/docker/clickhouse/clickhouse-02/users.d/: users.xml
backend/docker/clickhouse/clickhouse-03/config.d/: config.xml
backend/docker/clickhouse/clickhouse-03/users.d/: users.xml
backend/docker/clickhouse/keeper-01/: keeper_config.xml
backend/docker/clickhouse/keeper-02/: keeper_config.xml
backend/docker/clickhouse/keeper-03/: keeper_config.xml
backend/docker/monitoring/alloy/: config.alloy
backend/docker/monitoring/grafana/provisioning/dashboards/: fastapi_dashboard.json  health_dashboard.json  minio_dashboard.json  redis_ha_dashboard.json
backend/docker/monitoring/grafana/provisioning/datasources/: datasources.yaml
backend/docker/monitoring/loki/: loki-config.yaml
backend/docker/monitoring/prometheus/: prometheus.yaml
backend/docker/monitoring/tempo/: tempo.yaml
backend/docker/redis/app-primary/: redis.conf
backend/docker/redis/app-replica/: redis.conf
backend/docker/redis/sentinel/: sentinel.conf
backend/notebooks/: test_stream.ipynb
backend/src/: agent.py  auth.py  celery_app.py  db.py  db_bootstrap.py
backend/src/models/: auth_models.py  chat_models.py
backend/src/queue/: redis_pubsub.py
backend/src/worker/: tasks.py  worker_runner.py
backend/tests/: test_agent.py  test_auth_db.py  test_celery_app.py  test_db_extended.py  test_main.py  test_models.py  test_pubsub_extended.py  test_redis_pubsub.py  test_streaming.py  test_tasks_extended.py  test_worker.py  test_worker_extended.py
backend/utils/: streaming.py
docker/: docker-compose.yml
docker/nginx/: nginx.conf
frontend/: README.md  docker-compose.yaml  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/docker/: Dockerfile
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/context/: AuthContext.tsx  ThreadContext.test.tsx  ThreadContext.tsx
frontend/src/hooks/: useSSEStream.test.ts  useSSEStream.ts
frontend/src/tests/: setup.ts
frontend/src/types/: index.ts
(+12 files in other folders)
