[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "deepagents>=0.5.3",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.8",
    "redis>=7.4.0",
    "uvicorn[standard]>=0.44.0",
]
