[project]
name = "fictional-bassoon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "deepagents>=0.5.3",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.14",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.8",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg>=3.2.3",
    "psycopg-binary>=3.2.3",
    "psycopg-pool>=3.2.3",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.21.1",
    "python-dotenv>=1.0.0",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "redis>=7.4.0",
    "tox>=4.53.0",
    "uvicorn[standard]>=0.44.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
