[project]
name = "fictional-bassoon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "deepagents>=0.5.3",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.14",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.8",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg>=3.2.3",
    "psycopg-binary>=3.2.3",
    "psycopg-pool>=3.2.3",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.21.1",
    "python-dotenv>=1.0.0",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "redis>=7.4.0",
    "tox>=4.53.0",
    "uvicorn[standard]>=0.44.0",
    "ruff>=0.15.12",
    "PyJWT>=2.10.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.13.2",
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = ["E501"] # Line too long (handled by formatter)
